--- a/charts/k8sdemo/templates/ingress.yaml
+++ b/charts/k8sdemo/templates/ingress.yaml
@@ -6,10 +6,10 @@ kind: Ingress
 metadata:
   name: {{ $fullName }}
   labels:
-    app: {{ template "k8sdemo.name" . }}
-    chart: {{ template "k8sdemo.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    app.kubernetes.io/name: {{ include "k8sdemo.name" . }}
+    helm.sh/chart: {{ include "k8sdemo.chart" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
 {{- with .Values.ingress.annotations }}
   annotations:
 {{ toYaml . | indent 4 }}
@@ -20,15 +20,15 @@ spec:
   {{- range .Values.ingress.tls }}
     - hosts:
       {{- range .hosts }}
-        - {{ . }}
+        - {{ . | quote }}
       {{- end }}
       secretName: {{ .secretName }}
   {{- end }}
 {{- end }}
   rules:
   {{- range .Values.ingress.hosts }}
-    - host: {{ . }}
-      http:
+#    - host: {{ . | quote }}
+    - http:
         paths:
           - path: {{ $ingressPath }}
             backend:
