--- a/charts/k8sdemo/templates/service.yaml
+++ b/charts/k8sdemo/templates/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "k8sdemo.fullname" . }}
+  name: {{ include "k8sdemo.fullname" . }}
   labels:
-    app: {{ template "k8sdemo.name" . }}
-    chart: {{ template "k8sdemo.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    app.kubernetes.io/name: {{ include "k8sdemo.name" . }}
+    helm.sh/chart: {{ include "k8sdemo.chart" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -15,5 +15,5 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: {{ template "k8sdemo.name" . }}
-    release: {{ .Release.Name }}
+    app.kubernetes.io/name: {{ include "k8sdemo.name" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
