--- a/charts/k8sdemo/values.yaml
+++ b/charts/k8sdemo/values.yaml
@@ -6,19 +6,24 @@ replicaCount: 1
 
 image:
   repository: thara0402/k8sdemo
-  tag: 0.6.0
+  tag: 0.9.0
   pullPolicy: IfNotPresent
 
+nameOverride: ""
+fullnameOverride: ""
+
 service:
-  type: LoadBalancer
+  type: ClusterIP
   port: 80
 
 ingress:
-  enabled: false
-  annotations: {}
+  enabled: true
+  annotations: {
+    nginx.ingress.kubernetes.io/rewrite-target: /
+  }
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
-  path: /
+  path: /foo
   hosts:
     - chart-example.local
   tls: []
