--- a/charts/k8sdemo/values.yaml
+++ b/charts/k8sdemo/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: thara0402/k8sdemo
-  tag: 0.9.0
+  tag: 0.10.0
   pullPolicy: IfNotPresent
 
 nameOverride: ""
@@ -23,7 +23,7 @@ ingress:
   }
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
-  path: /foo
+  path: /app1
   hosts:
     - chart-example.local
   tls: []
