--- a/charts/k8sdemo/templates/service.yaml
+++ b/charts/k8sdemo/templates/service.yaml
@@ -3,10 +3,7 @@ kind: Service
 metadata:
   name: {{ include "k8sdemo.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "k8sdemo.name" . }}
-    helm.sh/chart: {{ include "k8sdemo.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+{{ include "k8sdemo.labels" . | indent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
